--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Fira+Sans&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="./dist/style.css">
   </head>
   <body>
@@ -17,8 +16,8 @@
     
     <div class="wrapper">
       <div class="text">
-        <h2>@shoedler/</h2>
-        <h1>app-node-ts-template</h1>
+        <h2 onclick="window.open('https:\/\/www.github.com\/shoedler')">@shoedler/</h2>
+        <h1 onclick="window.open('https:\/\/www.github.com\/shoedler\/app-node-ts-template')">app-node-ts-template</h1>
         <p>A modern ts, webpack + sass template</p>
       </div>
       
